php_app_mixed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpapp
  labels:
    app: phpapp
spec:
  ports:
  - name: fastcgi
    port: 9000
    targetPort: 80
  selector:
    app: phpapp
  type: ClusterIP
