php_app_mixed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns-prod"
  name: phpapp
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - REDACTED
    secretName: phpapp-tls
  rules:
  - host: REDACTED
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpapp
            port:
              name: fastcgi
